# whaler

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  asset-manifest.json  codecov.yml  du.txt  index.html  pyproject.toml  pyrightconfig.json  pytest.ini  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish-to-pypi.yml  pytest.yml  test-publish-to-pypi.yml  test.yml
docs/: _config.yml  _toc.yml  landing-page.ipynb
src/whaler/: cli.py  node.py  report.py  scan.py
src/whaler/static/: html.tgz
static/js/: 2.8c8d1684.chunk.js  2.8c8d1684.chunk.js.map  3.7e3ce9f2.chunk.js  3.7e3ce9f2.chunk.js.map  main.6211e42a.chunk.js  main.6211e42a.chunk.js.map  runtime-main.312fd3ec.js  runtime-main.312fd3ec.js.map  runtime-main.87bcebd9.js  runtime-main.87bcebd9.js.map
tests/: test_cli.py  test_report.py  test_scan.py
