[tool.poetry]
authors = ["alex-treebeard <alex@treebeard.io>"]
description = ""
homepage = "https://github.com/treebeardtech/whaler"
license = "Apache-2.0"
name = "whaler"
packages = [
  {include = "whaler", from = "src"},
]
readme = "README.md"
version = "0.1"


[tool.poetry.extras]
html = ["jupyter-book"]

[tool.poetry.dev-dependencies]
pre-commit = "^2.8.2"
pytest-cov = "^2.10.1"
virtualenv = "^20.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "poetry-core>=1.0.0"]
