[tool.poetry]
authors = ["alex-treebeard <alex@treebeard.io>"]
description = ""
homepage = "https://github.com/treebeardtech/whaler"
license = "Apache-2.0"
name = "whaler"
packages = [
  {include = "whaler", from = "src"},
]
readme = "README.md"
version = "0.1"

[tool.poetry.dependencies]
pathlib = "^1.0.1"
python = "^3.6.1"
plotly = "^4.14.1"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.8.2"
pytest = "^6.2.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "poetry-core>=1.0.0"]
